# India-Runs

./: .agent-rules.md  .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  HACKATHON_WIN_PLAN.md  IMPLEMENTATION_PLAN.md  ONBOARDING.md  PRD.md  README.md  TASK_LOG.md  check_data.py  claude.md  debug_offline.py  docker-compose.yml  generate_submission.py  pyproject.toml  rank.py  submission.csv  submission_metadata.yaml  test_cross_encoder.py  test_ranking.py  validate_submission.py
configs/: models.yaml  scoring_weights.yaml  settings.yaml
data/: evaluation_report.json  evaluation_report_full.json  evaluation_report_hybrid_pipeline.json
data/samples/: sample_500.jsonl  sample_candidates.json
docs/: api.md  architecture.md  deployment.md  evaluation.md
scripts/: build_indexes.py  build_offset_index.py  deploy.sh  e2e_test.py  evaluate.py  generate_data.py  generate_ground_truth.py
src/: main.py
src/agents/: executor.py  orchestrator.py  planner.py  prompts.py  reflector.py
src/core/: config.py  constants.py  models.py  profile_store.py  query_parser.py
src/evaluation/: __init__.py  metrics.py
src/extraction/: __init__.py  career_history_utils.py  company.py  domain.py  experience_years.py  pipeline.py  seniority.py  title.py
src/fairness/: anonymizer.py  bias_detector.py  metrics.py
src/ingestion/: extractor.py  normalizer.py  parser.py  quality_scorer.py
src/language/: __init__.py  code_mixed.py  detector.py  multilingual.py  translator.py
src/matching/: behavioral_scorer.py  confidence.py  experience_matcher.py  scorer.py  skill_matcher.py
src/ranking/: __init__.py  listwise_ranker.py
src/rationale/: generator.py  templates.py  (+1 more)
tests/: conftest.py
(+32 files in other folders)
