[project]
name = "india-runs"
version = "0.1.0"
description = "Intelligent Candidate Discovery System — India Runs Track 1"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # ML/NLP
    "sentence-transformers>=3.3",
    "torch>=2.4",
    "transformers>=4.46",
    "langdetect>=1.0.9",
    "deep-translator>=1.11",
    "spacy>=3.8",
    # Search
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2.2",
    # Agent
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.2",
    "openai>=1.52",
    "google-generativeai>=0.8",
    # Data
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    # UI
    "gradio>=5.0",
    "plotly>=5.24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.12",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
